// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests on <GifExpertApp/> Component must show correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`Tests on <GifExpertApp/> Must show a list of catgeories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="Gif"
    key="Gif"
  />
  <GifGrid
    category="Lol"
    key="Lol"
  />
</Fragment>
`;
